# dice-posterior

./: README.md  pyproject.toml
assignment/: assignment.ipynb  assignment.py  test_assignment.py
autograder/: Dockerfile
